# LearningFastAPI

./: main.py  pyproject.toml  sql_app.db
sql_app/: crud.py  database.py  main.py
