[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "learningfastapi"
version = "0.1.0"
description = ""
authors = ["Jasper Sival <jaspersival@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
black = "^21.11b1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
